<resources>
    <string name="default_web_client_id">309899331843-b4audocqk2m0suo1mhjejbee0haa4101.apps.googleusercontent.com</string>
    <string name="facebook_app_id">3379520719011713</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">cc809d834d6ab5cc62dd99bec19b2296</string>

    <string name="app_name">Order Karo Admin</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="develop_by_n_muhammad_adil_ashraf">Develop by \nMuhammad Adil Ashraf</string>
    <string name="logo">Logo</string>
    <string name="enjoy_restaurant_quality_meals_n_at_home">Enjoy Restaurant Quality Meals \n at Home</string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email</string>
    <string name="or">or</string>
    <string name="continue_with">Continue With</string>
    <string name="facebook">facebook</string>
    <string name="google">Google</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="name_of_owner">Name of Owner</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="login_to_your_n_admin_dashboard">Login To Your \n Admin Dashboard</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="sign_up_here_for_your_n_admin_dashboard">Sign Up Here For Your \n Admin Dashboard</string>
    <string name="pending_order">Pending \n Orders</string>
    <string name="_30">30</string>
    <string name="_100">100</string>
    <string name="completed_n_order">Completed \n order</string>
    <string name="whole_time_n_earning">Whole Time \n Earning</string>
    <string name="plus">plus</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="profile">Profile</string>
    <string name="create_new_user">Create New User</string>
    <string name="add_menu">Add Menu</string>
    <string name="order_dispatch">Order Dispatch</string>
    <string name="log_out">Log Out</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="short_description">Short Description</string>
    <string name="enter_shor_description">Enter Shor Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="back_image">Back Image</string>
    <string name="item_image">Item Image</string>
    <string name="image">image</string>
    <string name="increse">Increse</string>
    <string name="decrease">decrease</string>
    <string name="delete">delete</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="click_here_to_edit">Click Here To Edit</string>
    <string name="create_new_user_admin">Create New User Admin</string>
    <string name="create_new_account">Create New Account</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="delivered">Delivered</string>
    <string name="customer_name">Customer Name</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="continue_with_google">Continue with Google</string>


    <string name="price">Price</string>
    <string name="_03123456789">03123456789</string>
    <string name="total_amount">Total Amount</string>
    <string name="name_">Name:</string>
    <string name="address_">Address:</string>
    <string name="total_price">Total Price</string>
    <string name="_0">0</string>
    <string name="name_of_resturant">Name of Resturant</string>
    <string name="create_new_admin">Create New Admin</string>
</resources>