<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <ImageView
                android:id="@+id/imgback"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/back_image" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/add_item"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_40sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edittextshape"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/editItemName"
                android:layout_width="0dp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:fontFamily="@font/yeon_sung_regular"
                android:hint="@string/enter_item_name"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edittextshape"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/item_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/editItemPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:fontFamily="@font/yeon_sung_regular"
                android:hint="@string/enter_item_price"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edittextshape"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/item_image"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/pluse_round_black"
                android:contentDescription="@string/add_item" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="@dimen/_15sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_15sdp"

                >

                <ImageView
                    android:id="@+id/addImage1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/addimage"
                    android:contentDescription="@string/add_item" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edittextshape"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/short_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/editItemShortDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:fontFamily="@font/yeon_sung_regular"
                android:hint="@string/enter_shor_description"
                android:inputType="textMultiLine"
                android:paddingVertical="@dimen/_15sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="description" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edittextshape"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/ingredients"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/editItemIngredients"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:fontFamily="@font/yeon_sung_regular"
                android:hint="@string/enter_ingredients"
                android:inputType="textMultiLine"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="name" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addItem"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:textSize="@dimen/_16sdp"
            android:text="@string/add_item"
            android:textColor="@color/white"
            android:background="@drawable/greenbuttonshape"
            />
    </LinearLayout>
</ScrollView>